# bankable-property-network

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.md  LICENSE  README.md  SECURITY.md  render.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
apps/api/: pyproject.toml
apps/api/src/app/: __init__.py  config.py  demo_case.py  logging_config.py  main.py  paths.py
apps/api/src/app/schemas/: attester.py  demo.py
apps/api/src/app/services/: __init__.py  attester_service.py  capital.py  closing_passport_demo.py  compliance_dsl.py  consult_contour.py  consult_retrieval.py  data_loader.py  developer_knowledge.py  eas_client.py  evidence_pack.py  farcaster_frame.py  rag.py  risk_engine.py  routing.py  scenarios.py  supplier_contrast_demo.py  wallet_taint.py  yield_plan.py
apps/api/tests/: test_api.py  test_attester_api.py  test_attester_service.py  test_closing_passport.py  test_compliance_dsl.py  test_consult_knowledge.py  test_consultation.py  test_developer_knowledge.py  test_farcaster_frame.py  test_paths.py  test_policy_packs.py  test_rag.py  test_routing.py  test_supplier_contrast.py  test_wallet_taint.py
config/: default.yaml
contracts/: README.md  foundry.toml  slither.config.json
docs/: AGENT_STACK_EVALUATION.md  AI_AUDIT_INDEX.md  API_CONTRACT.md  ARCHITECTURE.md  ATTESTATION_SCHEMA.md  BUYER_CONSULTATION_AGENT.md  COMPARISON.md  COMPARISON_EVIDENCE.md  CONSULT_DIALOGUE_SIMULATION_REPORT.md  DEMO_CHECKLIST.md  DEMO_SCRIPT.md  DEPLOY.md  DEVELOPER_SUPPLY_DEMO.md  DEV_SIMULATION.md  (+48 more)
(+145 files in other folders)
