[project]
name = "bankable-property-os-api"
version = "0.1.0"
description = "Bankable Property OS API for the Closing Passport hackathon demo."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
