[project]
name = "attestrwa-api"
version = "1.0.0-alpha.1"
description = "AttestRWA — Settlement Attestation Layer API. Off-chain attester service that signs on-chain EAS attestations for RWA stablecoin settlements."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "uvicorn",
    "web3>=7.6",
    "eth-account>=0.13",
    "eth-abi>=5.1",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
